[gd_scene load_steps=5 format=3 uid="uid://sle168uvhvfu"]

[ext_resource type="Texture2D" uid="uid://m35ara1eljfb" path="res://images.png" id="1_efvb3"]
[ext_resource type="Script" uid="uid://igayhf4edim0" path="res://fighter.gd" id="1_umvcx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_umvcx"]
size = Vector2(89, 81)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qq641"]
size = Vector2(90, 81)

[node name="Fighter" type="CharacterBody2D"]
script = ExtResource("1_umvcx")

[node name="Nose" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(46, -6)
scale = Vector2(0.137778, 0.0888886)
texture = ExtResource("1_efvb3")

[node name="Sprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -3.8147e-06)
scale = Vector2(0.4, 0.364444)
texture = ExtResource("1_efvb3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.5, -0.5)
shape = SubResource("RectangleShape2D_umvcx")

[node name="Bullets" type="Node" parent="."]
unique_name_in_owner = true

[node name="CooldownTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.25
one_shot = true

[node name="HurtBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(-1, -0.5)
shape = SubResource("RectangleShape2D_qq641")
debug_color = Color(0.955126, 0, 0.544843, 0.42)

[node name="HealthLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = -52.0
offset_top = -87.0
offset_right = 56.0
offset_bottom = -45.0
theme_override_font_sizes/font_size = 30
text = "HP: 100"

[node name="ShootingPoint" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(72, -7)
scale = Vector2(0.137778, 0.0888886)

[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
